<resources>
    <string name="sender_id">1</string>
    <string name="app_name">TuDime</string>
    <string name="chat_sample">TuDime</string>
    <string name="menu_chat_info">Detais View</string>
    <string name="menu_add_users_to_chat">Add Users to Chat</string>
    <string name="menu_leave_chat">Leave Chat</string>
    <string name="menu_delete_chat">Delete Chat</string>
    <string name="menu_dialogs_logout">Logout</string>
    <string name="menu_dialogs_delete">Delete</string>
    <string name="menu_dialogs_app_info">App Info</string>
    <string name="menu_select_people_done">Done</string>
    <string name="error_name_must_not_contain_special_characters_from_app"> 1$s must contain 3 —  2$s alphanumeric Latin characters without spaces, the first char must be a letter</string>
    <string name="field_name_user_login">User name</string>
    <string name="field_name_user_fullname">User Full Name</string>
    <string name="dlg_loading">Loading</string>
    <string name="dlg_restoring_chat_session">Restoring chat session…</string>
    <string name="create_chat">Creating chat…</string>
    <string name="dlg_login">Login…</string>
    <string name="new_chat_created">created new chat</string>
    <string name="occupant_added">added</string>
    <string name="occupant_left">has left</string>
    <string name="change_theam">You Change Chat Theme</string>
    <string name="chat_error_send_message">Can\'t send a message, You are not connected to chat</string>
    <string name="placeholder_username_you">\t[ ME ]</string>
    <string name="error_recreate_session">Login Chat error</string>
    <string name="login_title">@string/chat_sample</string>
    <string name="login_chat_login_error">Login Chat error. Please relogin. Error</string>
    <string name="login_sign_up_error">Sign up error.</string>
    <string name="dialogs_logged_in_as">Logged in as</string>
    <string name="dialogs_cannot_delete_chat">You can not leave from dialog</string>
    <string name="dialogs_creation_error">Dialog creation errors</string>
    <string name="dialogs_deletion_error">Dialog deletion errors</string>
    <string name="dialogs_list_hint">Select a Dialog to Chat</string>
    <string name="select_users_list_hint">Select Users you want to chat</string>
    <string name="select_users_create_chat">Create new chat</string>
    <string name="select_users_edit_chat">Add Users to chat</string>
    <string name="select_users_get_users_error">Get users errors</string>
    <string name="select_users_get_dialog_error">Error getting dialog from server</string>
    <string name="select_users_get_users_dialog_error">Error getting users dialog from server</string>
    <string name="select_users_choose_users">Please, choose at least one participant</string>
    <string name="chat_send">Send</string>
    <string name="chat_edit_text_hint">Message</string>
    <string name="chat_load_users_error">Load chat users errors</string>
    <string name="chat_attachment">Attachment</string>
    <string name="chat_empty_you_are_alone_here">To start chat with contacts who have \nTuDime, tap the contacts tab on top of\n screen</string>
    <string name="chat_empty_start_new_chat">Start new chat.</string>
    <string name="chat_wait_for_attachments_to_upload">Wait for all attachments to upload</string>
    <string name="notification_title">TuDime Chat Notification</string>
    <string name="connection_error">Chat connection has been dropped</string>
    <string name="update_dialog_error">Update Dialog error</string>
    <string name="reconnect_alert">Reconnecting in seconds</string>
    <string name="restriction_upload_files">Max attachment number: 10</string>
    <string name="added_users">The users have been added</string>
    <string name="chat_info">Chat info</string>
    <string name="chat_info_add_people_error">Add people errors</string>
    <string name="public_group_chat_cannot_be_deleted">Public Group chat can be deleted only by owner</string>
    <string name="error_leave_chat">Error leaving room</string>
    <string name="statuses_delivered">Delivered</string>
    <string name="statuses_read">Read</string>
    <string name="statuses_sent">Sent</string>
    <string name="dialog_enter_chat_name">Enter chat name</string>
    <string name="dialog_OK">OK</string>
    <string name="dialog_Cancel">Cancel</string>
    <string name="dialog_retry">Retry</string>
    <string name="dialog_choose_image_from">Select photo from…</string>
    <string name="error_credentials_empty">Credentials are wrong or empty. You have to set:
        Application ID, Authentification Key, Authentification Secret, Account Key in constants in App.java
        and you have to set Sender ID in the string resources to launch application.
        If you haven\'t them you can register new account and application at https://admin.quickblox.com
        then put Application credentials from Overview page + Account key from https://admin.quickblox.com/account/settings</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="error">Error</string>
    <string name="changenumber">Change Number</string>
    <string name="privacy1">Privacy</string>
    <string name="your_current_status">Your Current Status</string>
    <string name="select_your_status">Select Your Status</string>
    <string name="cancel">Cancel</string>
    <string name="Stay_hapy">Stay Happy &amp; beautiful</string>
    <string name="hide_from_all">Hide from all</string>
    <string name="hide_from_specific_user">Hide from specific user(s)</string>
    <string name="block_user">Block user(s)</string>
    <string name="remove_time_stamp">Remove time stamp of "last seen"</string>
    <string name="set_pass_encounter">Set password to open Encounters</string>
    <string name="change_password_encounter">Thay đổi mật khẩu thành cuộc gặp gỡ</string>
    <string name="verfication_code">We have sent a verification code to</string>
    <string name="xx">XXX XXX XX00</string>
    <string name="code_below">Please enter the received verification code below.</string>
    <string name="Enter_verification_code">Enter verification code</string>
    <string name="RESEND_VERIFICATION_CODE">RESEND VERIFICATION CODE</string>
    <string name="take_photo">Take Photo</string>
    <string name="pick_image">Pick Image</string>
    <string name="choose_one">Choose One :</string>
    <string name="verification">Registration</string>
    <string name="pass">Enter Pin</string>
    <string name="confirm_pass">Confirm Pin</string>
    <string name="call_to_get_verification_code">Call To Get verification Code</string>
    <string name="code_msg">A code was sent to you by text message.\n If not, click on this link.</string>
    <string name="pick_video">Pick Video</string>
    <string name="take_video">Take Video</string>
    <string name="verify">VERIFY</string>
    <string name="share_everywhere">Share Everywhere</string>
    <string name="share_on_tudime">Share On TuDime</string>
    <string name="autosend">Auto-send</string>
    <string name="resend_code">
      <u>Send Code again</u>
   </string>
    <string name="security_answer">Security answer</string>
    <string name="for_any_changes_in_details_please_contact_support">For any changes in details, Please contact support</string>
    <string name="plan_type">Plan Type</string>
    <string name="plan_details">Plan Details</string>
    <string name="buy_tudime_membership">Buy TuDime Membership</string>
    <string name="go">Go</string>
    <string name="your_security_question">Your Security question:</string>
    <string name="enter_security_answer">Enter Security answer</string>
    <string name="new_password">New Password</string>
    <string name="new_confirm_password">New Confirm Password</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="_10_minutes">10 minutes</string>
    <string name="_20_minutes">20 minutes</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="_40_minutes">40 minutes</string>
    <string name="_50_minutes">50 minutes</string>
    <string name="_60_minutes">60 minutes</string>
</resources>