<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="obj.quickblox.sample.chat.java.ui.activity.SignUpVerificationActivity">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/sky_blue"
    android:elevation="8dp"
    android:minHeight="?attr/actionBarSize"
    app:layout_scrollFlags="scroll|enterAlways"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    app:theme="@style/ThemeOverlay.AppCompat.Dark"
    app:titleTextColor="@color/primary_grey_dark">


    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/back_button_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/verification"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />
</androidx.appcompat.widget.Toolbar>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/toolbar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/verification_icon" />

        <TextView
            android:id="@+id/txtNot1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/verfication_code"
            android:textColor="@color/active_fonts"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/txtNot3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvNum"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/code_below"
            android:textColor="@color/active_fonts"
            android:textSize="17dp" />

        <LinearLayout
            android:id="@+id/lnrCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNot3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <EditText
                android:id="@+id/etVerificationCode"
                android:layout_width="fill_parent"
                android:imeOptions="actionDone"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:hint="@string/Enter_verification_code"
                android:inputType="number"
                android:padding="8dp"
                android:maxLength="6"
                android:textColor="@color/black"
                android:textColorHint="#676767"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/code_msg"
                android:textColor="@color/active_fonts"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt_send_code_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/resend_code"
                android:textColor="@color/active_fonts"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lnrCall"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/no_call_icon_grey"
                android:drawablePadding="3dp"
                android:padding="8dp"
                android:text="@string/call_to_get_verification_code"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/lnrCall"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:paddingBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_tudime"
                android:text="@string/verify"
                android:textColor="@color/sky_blue"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/RESEND_VERIFICATION_CODE"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/txvNum"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtNot1"
            android:gravity="center"
            android:text="@string/xx"
            android:textColor="@color/active_fonts"
            android:textSize="17dp" />

    </RelativeLayout>
</ScrollView>

</RelativeLayout>