<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#fff"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/verification_logo_tudime"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_security_question"
                android:textSize="18dp"
                android:textColor="@color/active_fonts"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:id="@+id/my_seurity_qustion"
                android:textColor="@color/active_fonts"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:id="@+id/lin_pass"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_below="@id/password_enter"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/transparent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/security_answer"
                    android:textSize="18dp"
                    android:textColor="@color/active_fonts"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    />
                <EditText
                    android:id="@+id/enter_security_answer"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/enter_security_answer"
                    android:singleLine="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_edit"
                    android:paddingLeft="10dp"
                    android:textColor="@color/active_fonts"
                    android:textColorHint="#674767"
                    android:textSize="18sp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/password_section"
    android:visibility="gone"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textSize="18dp"
        android:textColor="@color/active_fonts"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />


        <EditText
            android:id="@+id/enter_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/pass"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:background="@drawable/bg_edit"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:paddingLeft="10dp"
            android:textColor="@color/active_fonts"
            android:textColorHint="#674767"
            android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_confirm_password"
        android:textSize="18dp"
        android:id="@+id/passw_confirm"
        android:layout_below="@id/lin_pass"
        android:textColor="@color/active_fonts"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />


        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/confirm_pass"
            android:singleLine="true"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:background="@drawable/bg_edit"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/active_fonts"
            android:textColorHint="#676767"
            android:textSize="18sp" />

</LinearLayout>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/go"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/save"
                    android:layout_below="@id/lin_sec_ans1"
                    android:background="@color/sky_blue"
                    android:layout_marginTop="30dp"/>

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>