<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pop_up_box"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/choose_one"
            android:textSize="18sp"
            android:layout_marginTop="7dp"
            android:textStyle="bold"
            android:textColor="@color/active_fonts"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="10dp"
            android:background="@color/lite_grey"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/share_everywhere"
            android:textSize="18sp"
            android:id="@+id/share_anywhere"
            android:textColor="@color/active_fonts"
            android:gravity="center_vertical|center_horizontal"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="10dp"
            android:background="@color/lite_grey"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/share_app"
            android:visibility="visible"
            android:text="@string/share_on_tudime"
            android:textSize="18sp"
            android:textColor="@color/active_fonts"
            android:gravity="center_vertical|center_horizontal"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="10dp"
            android:background="@color/lite_grey"
            />

        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/autosend"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/active_fonts"
            android:gravity="center_vertical|center_horizontal"
            />

    </LinearLayout>

</LinearLayout>