<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.TuDime.ui.activity.TuDime_Membership">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:fontFamily="@font/manrope_extrabold"
        android:gravity="center"
        android:text="@string/for_any_changes_in_details_please_contact_support"
        android:textSize="@dimen/dimen_14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:background="#202196F3"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/padding_10"
            android:fontFamily="@font/manrop_regular"
            android:text="@string/plan_type"
            android:textColor="@color/color_blue_accent"
            android:textSize="@dimen/dimen_16dp"
            android:layout_marginLeft="@dimen/dimen_20dp" />

        <TextView
            android:id="@+id/plane_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/padding_5"
            android:fontFamily="@font/manrope_extrabold"
            android:singleLine="true"
            android:textColor="@color/color_blue_accent"
            android:textSize="@dimen/dimen_18dp"
            android:layout_marginLeft="@dimen/dimen_20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/padding_10"
            android:fontFamily="@font/manrop_regular"
            android:text="@string/plan_details"
            android:textColor="@color/color_blue_accent"
            android:textSize="@dimen/dimen_16dp"
            android:layout_marginLeft="@dimen/dimen_20dp" />

        <TextView
            android:id="@+id/Plan_Details_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/padding_5"
            android:fontFamily="@font/manrope_extrabold"
            android:singleLine="true"
            android:textColor="@color/color_blue_accent"
            android:textSize="@dimen/dimen_18dp"
            android:layout_marginLeft="@dimen/dimen_20dp" />

        <TextView
            android:id="@+id/buy_membership"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_gravity="center"
            android:fontFamily="@font/avenirnext_heavy"
            android:text="@string/buy_tudime_membership"
            android:padding="@dimen/padding_10"
            android:textColor="@color/white"
            android:background="@drawable/bg_btn_white"
            android:textSize="@dimen/dimen_18dp" />



    </LinearLayout>


</LinearLayout>